# ephys-acquisition

./: LICENSE  README.md  align_video.py  config.py  docs-requirements.txt  experiment_dashboard.py  features_to_add.md  main.py  pyproject.toml  requirements.txt  update_experiment_log.py
acquisition/: __init__.py  continuous_mode.py  continuous_protocol_runner.py  data_buffer.py  data_saver.py  trial_mode.py  trial_protocol.py  trial_saver.py  trial_waveforms.py
analysis/: align_video.py  analysis_gui.py  analyze_steps.py  current_injection_steps.ipynb  kt.mplstyle  qc_alignment.py  qc_report.py
analysis/qc/: __init__.py  alignment.py  descriptions.py  hook.py  integrity.py  load.py  report.py  signal.py  stimulus.py
docs/: acquisition.html  analysis.html  config.html  hardware.html  index.html  main.html  search.js  ui.html  utils.html
docs-templates/: custom.css  index.html.jinja2  search.html.jinja2
docs/acquisition/: continuous_mode.html  continuous_protocol_runner.html  data_buffer.html  data_saver.html  trial_mode.html  trial_protocol.html  trial_saver.html  trial_waveforms.html
docs/analysis/: align_video.html  analysis_gui.html  analyze_steps.html  qc.html  (+2 more)
ephys_acquisition.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hardware/: camera_config.py  camera_worker.py  daq_config.py  daq_worker.py
ui/: camera_panel.py  control_panel.py  main_window.py  protocol_builder.py  stimulus_panel.py  trace_panel.py  widgets.py
utils/: data_loader.py  experiment_dashboard.py  stimulus_generator.py  update_experiment_log.py
(+22 files in other folders)
