[project]
name = "ephys-acquisition"
version = "0.1.0"
description = "code for running ephys experiments"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "h5py>=3.10",
    "nidaqmx>=0.9",
    "numpy>=1.26",
    "opencv-python>=4.9",
    "pandas>=2.0",
    "pypylon>=3.0",
    "pyqtgraph>=0.13",
    "pyside6>=6.6",
    "scipy>=1.12",
    "streamlit>=1.35",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
ephys-gui = "main:main"

[tool.setuptools]
py-modules = ["main", "config"]

[tool.setuptools.packages.find]
where = ["."]
include = ["acquisition*", "analysis*", "hardware*", "ui*", "utils*"]

[dependency-groups]
docs = [
    "pdoc>=14.0",
]
